--- a/on-the-road.css
+++ b/on-the-road.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');
 body {
     display: block;
     text-align: center;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 .map {
     width: 100%;
@@ -55,7 +57,7 @@ body {
     color: white;
     user-select: none;
     font-size: 1.3em;
-    font-weight: 500;
+    font-weight: 600;
     padding: 0.5em 1em;
 }
 .destination:nth-child(1n) .header {
