--- a/on-the-road.css
+++ b/on-the-road.css
@@ -82,3 +82,14 @@ body {
 .quote {
     font-style: italic;
 }
+
+.top-bar {
+        width: 60%;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+}
+
+.top-bar p {
+        font-size: 1.2em;
+}
