set header to maybe make it even with map

--- a/on-the-road.css
+++ b/on-the-road.css
@@ -55,7 +55,7 @@ body {
     padding-left: 0.75em;
 }
 .header {
-    height: 54px;
+    height: 2.25em;
     box-sizing: border-box;
     color: white;
     user-select: none;
