--- a/resources/index.css
+++ b/resources/index.css
@@ -30,3 +30,8 @@ p {
         text-indent: 2em;
         font-size: 1.1em;
 }
+
+.twitter-tweet {
+        margin-left: auto;
+        margin-right: auto;
+}
