--- a/resources/index.css
+++ b/resources/index.css
@@ -31,7 +31,7 @@ p {
         font-size: 1.1em;
 }
 
-.twitter-tweet {
+.twitter-tweet twitter-tweet-rendered {
         margin-left: auto;
         margin-right: auto;
 }
