--- a/resources/index.css
+++ b/resources/index.css
@@ -31,7 +31,8 @@ p {
         font-size: 1.1em;
 }
 
-.twitter-tweet twitter-tweet-rendered {
+blockquote {
         margin-left: auto;
         margin-right: auto;
+        align: center;
 }
