--- a/resources/index.css
+++ b/resources/index.css
@@ -31,7 +31,7 @@ p {
         font-size: 1.1em;
 }
 
-blockquote {
+.tweet {
         margin-left: auto;
         margin-right: auto;
         align: center;
