--- a/resources/index.css
+++ b/resources/index.css
@@ -35,4 +35,6 @@ p {
         margin-left: auto;
         margin-right: auto;
         align-self: center;
+        display: grid;
+        justify-content: center;
 }
