--- a/resources/index.css
+++ b/resources/index.css
@@ -28,7 +28,20 @@ p {
         margin-right: auto;
         width: 50em;
         text-indent: 2em;
-        font-size: 1.1em;
+        font-size: 1.5em;
+}
+
+h2 {
+        margin-left: auto;
+        margin-right: auto;
+}
+
+a {
+        color: #ffbf00;
+}
+
+a:visited {
+        color: #ffbf00;
 }
 
 .tweet {
